--- a/CODE/frosdotUI/mdToDocx/templates/mdToDocx/detail.html
+++ b/CODE/frosdotUI/mdToDocx/templates/mdToDocx/detail.html
@@ -11,11 +11,25 @@
 
         <ul>
 
-            {% for choice in query.choice_set.all %}
-            <li>{{ choice.choice_text }}</li>
+            {% for choice in query.response_set.all %}
+            <li>{{ choice.response_text }}</li>
             {% endfor %}
 
         </ul>
+
+        <form action="{% url 'queries:marks' query.id %}" method="post">
+            {% csrf_token %}
+            <fieldset>
+                <legend<h1>{{query.response_text}}</ht></legend>
+                {% if error_message %}<p><strong>{{error_message}}</strong></p>{% endif %}
+                {% for choice in query.response_set.all %}
+                <input type="radio" name="choice" id="choice{{forloop.counter }}" value="{{choice.id }}">
+                <label for="choice{{ forloop.counter }}">{{choice.response_text }}</label><br>
+                {% endfor %}
+            </fieldset>
+            <input type="submit" value="Mark">
+        </form>
+
 
     </body>
 </html>
